--- a/components/NavBar.css
+++ b/components/NavBar.css
@@ -6,7 +6,7 @@ nav {
   backdrop-filter: blur(12px);
   background: rgba(255, 255, 255, 0.6);
   border-bottom: 1px solid rgba(255, 255, 255, 0.4);
-  z-index: 1000;
+  /* z-index: 1000; */
   box-shadow: 0 3px 10px rgba(0,0,0,0.1);
 }
 
